oc/deploymnet.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deploy-test
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deploy-test
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: deploy-test
    spec:
      containers:
        - name: container
          image: 'image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
